<resources>
    <string name="app_name">ToDoList App</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_status">Enter Status</string>
    <string name="select_priority">Select Task Priority</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="save_task">Save Task</string>
    <string name="task_name">Task Name</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="delete_all_task">Delete All Task</string>
</resources>
