<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_task_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/task_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"
        android:hint="@string/enter_status"
        android:inputType="text"
        android:autofillHints="" />


    <TextView
        android:id="@+id/priority_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_status"
        android:layout_margin="10dp"
        android:text="@string/select_priority"
        android:textAlignment="center"
        android:textColor="@android:color/black" />


    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priority_txt"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_picker"
        android:hint="@string/enter_task_description"
        android:inputType="text"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:text="@string/save_task"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>